--- a/tex/main.tex
+++ b/tex/main.tex
@@ -61,11 +61,8 @@
 \maketitle
 
 {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
-  {\normalfont \itshape Abstract:} Animal \infl  strains emerging into humans % can introduce large antigenic shifts in the circulating  population, and
-  are suspected to have triggered devastating  pandemics in the past~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up}. Yet, our  ability to  scalably  evaluate the pandemic potential of   individual strains that do not yet circulate in humans, remains limited. In this study we introduce the \enet,  to computationally learn how viable genotypic variations are shaped by   evolutionary constraints using only genomic sequences  of key viral proteins.  Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA)  sequences from nearly 100,000  unique strains,  we estimate the likelihood of  specific future  mutations,   yielding the  numerical odds of one  strain giving rise to a specific descendant via natural % evolutionary
-  processes. After validating our model to forecast the dominant strain(s) for seasonal flu, with \enet-based forecasts significantly outperforming WHO recommendations almost consistently over the past two decades for  H1N1/H3N2 subtypes, individually in the Northern/Southern hemispheres (HA: $34.8\% $ improvement, NA: $12.5\%$ improvement), we assess  the pandemic potential  of  animal  strains that do not yet circulate in humans. While the state-of-the-art  Influenza Risk Assessment Tool (IRAT) from the CDC comprises multiple time-consuming experimental assays, our proposed \erisk score can be evaluated in $\approx 6$ seconds per strain, while strongly correlating with published IRAT scores (correlation=$0.703$, p-value $= 0.00026$). This  six orders of magnitude speedup (weeks vs seconds) in  identifying risky strains is a necessary step to exploit the  current surveillance capacity via scalably analyzing thousands of strains collected annually. Analyzing 6,066 \infl strains  collected post 2020, we  identify  strains of diverse subtypes,  hosts and geo-locations posing maximal  risk,  with $6$ having estimated  emergence scores $> 6.5$). Such scalable risk-ranking % of individual strains
-  can   enable  meaningful preemptive pandemic mitigation, including targeted inoculation of animal hosts before the first human infection, % Such strategies might be particularly relevant to evade or mitigate the next pandemic
-and  outline new public health measures effective notwithstanding possible vaccine hesitancy in humans that  impact optimal pandemic response.
+  {\normalfont \itshape Abstract:} Animal \infl  strains emerging into humans 
+  are suspected to have triggered devastating  pandemics in the past~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up}. Yet, our  ability to  evaluate the pandemic potential of   individual strains that do not yet circulate in humans, remains limited. In this study we introduce the \enet,  to computationally learn how viable genotypic variations are shaped by   evolutionary constraints using only genomic sequences  of key viral proteins.  Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA)  sequences from nearly 100,000  unique strains,  we estimate the likelihood of  specific future  mutations,   yielding the  numerical odds of one  strain giving rise to a specific descendant via natural   processes. After validating our model to forecast the dominant strain(s) for seasonal flu, with \enet-based forecasts significantly outperforming WHO recommendations almost consistently over the past two decades for  H1N1/H3N2 subtypes, individually in the Northern/Southern hemispheres (HA: $34.8\% $ improvement, NA: $12.5\%$ improvement), we assess  the pandemic potential  of  animal  strains that do not yet circulate in humans. While the state-of-the-art  Influenza Risk Assessment Tool (IRAT) from the CDC comprises multiple time-consuming experimental assays, our calculations take  $\approx 6$ seconds per strain, while strongly correlating with published IRAT scores (correlation=$0.703$, p-value $= 0.00026$). This  six orders of magnitude speedup (weeks vs seconds) in  identifying risky strains is a necessary step to exploit  current surveillance capacity via scalably analyzing thousands of strains collected annually. Considering 6,066 wild \infl viruses  sequenced post 2020, we  identify individual strains of diverse subtypes,  hosts and geo-locations posing maximal  risk,  with $6$ having estimated  emergence scores $> 6.5$. Such scalable risk-ranking can   enable   preemptive pandemic mitigation, including targeted inoculation of animal hosts before the first human infection, and  outline new public health measures that are potentially effective notwithstanding possible vaccine hesitancy in humans that  impact optimal pandemic response.
 }
   
 \vspace{10pt}
