--- a/tex/SIfig.tex
+++ b/tex/SIfig.tex
@@ -1,7 +1,7 @@
 \setcounter{figure}{0}
-\renewcommand{\figurename}{SI Fig.}
+\renewcommand{\figurename}{S-Fig.}
 \setcounter{table}{0}
-\renewcommand{\tablename}{SI Tab.}
+\renewcommand{\tablename}{S-Tab.}
 %\setcounter{table}{0}
 %\renewcommand{\tablename}{SI Tab.}
 
